--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,45 @@
 	margin-left: -20px;
 	margin-right: 0;
 	margin-top: -10px;
+	overflow: visible;
+	font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
+	color: #111827;
+	background: #f9fafb;
+}
+
+#poststation-app *,
+#poststation-app *::before,
+#poststation-app *::after {
+	box-sizing: border-box;
+}
+
+#poststation-app h1,
+#poststation-app h2,
+#poststation-app h3,
+#poststation-app h4,
+#poststation-app h5,
+#poststation-app h6,
+#poststation-app p,
+#poststation-app ul,
+#poststation-app ol,
+#poststation-app li,
+#poststation-app figure,
+#poststation-app blockquote {
+	margin: 0;
+	padding: 0;
+}
+
+#poststation-app button,
+#poststation-app input,
+#poststation-app select,
+#poststation-app textarea {
+	font: inherit;
+	color: inherit;
+}
+
+#poststation-app a {
+	color: inherit;
+	text-decoration: none;
 }
 
 @media (min-width: 783px) {
@@ -25,10 +64,25 @@
 	position: sticky;
 	top: 32px;
 	z-index: 99990;
+	width: 100%;
 }
 
 @media screen and (max-width: 782px) {
 	.poststation-sticky-header {
+		top: 0;
+	}
+}
+
+body.admin-bar .poststation-mobile-overlay,
+body.admin-bar .poststation-mobile-sidebar {
+	top: 32px;
+	height: calc(100vh - 32px);
+}
+
+@media screen and (max-width: 782px) {
+	body.admin-bar .poststation-mobile-overlay,
+	body.admin-bar .poststation-mobile-sidebar {
 		top: 46px;
+		height: calc(100vh - 46px);
 	}
 }
