--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
 }
 
 #poststation-app textarea.poststation-field {
-	@apply min-h-24 resize-y;
+	@apply min-h-10 field-sizing-content resize-y;
 }
 
 #poststation-app .poststation-field-checkbox {
@@ -74,6 +74,12 @@
 
 #poststation-app .poststation-field-color {
 	@apply h-10 w-full cursor-pointer rounded-lg border border-gray-300 bg-white p-1;
+}
+
+#poststation-app .poststation-icon-btn {
+	@apply inline-flex items-center justify-center rounded-md border border-gray-300 bg-white p-1.5 text-gray-500 transition;
+	@apply hover:border-indigo-300 hover:bg-indigo-50 hover:text-indigo-600;
+	@apply disabled:cursor-not-allowed disabled:opacity-50;
 }
 
 #poststation-app a {
